tests/parsing/smtlib/v2.7/errors/008_exists_unclosed_1.smt2
(set-logic ALL)
(assert (exists ((x int)) x _))
